Set body to min-height 100vh so it takes up full viewport at minimum, remove html and body height of 100% to avoid body overflowing html

--- a/styles/main.css
+++ b/styles/main.css
@@ -70,8 +70,8 @@ html {
   }
 }
 
-html, body {
-  height: 100%;
+body {
+  min-height: 100vh;
 }
 
 body {
